# piipaa

./: .editorconfig  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: SUMMARY.md  book.toml  changes.md  index.md  install.md  test-coverage.md
src/piipaa/: __main__.py  cli.py  data.json  piipaa.py
src/pipa/: __init__.py  __main__.py  cli.py  data.json  pipa.py
test/: requirements-dev.txt  requirements.txt  test_cli.py  test_piipaa.py  test_pipa.py
