[metadata]
name = pipa
version = 2022.4.2
description = Python Installs Python anywhere.
url = https://github.com/sthagen/pipa
author = Stefan Hagen
author_email = "Stefan Hagen" <stefan@hagen.link>
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*
